# cet6-flashcards

./: .gitignore  Cargo.toml  MODELS_README.md  README.md  RVC_README.md  Trunk.toml  eye-tracking-test.html  index.html  requirements.txt  rvc_server.py  start_rvc_server.sh
audio_cache/: cache_index.json
src/: main.rs  models.rs
