[package]
name = "cet6-words"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "console", "Document", "HtmlInputElement", "MouseEvent", "InputEvent", "KeyboardEvent", "HtmlElement", "EventTarget", "Event"] }
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
gloo-utils = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
